packages/server/prod/falkordb-dashboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: falkordb-dashboard
  namespace: falkordb-dashboard
  labels:
    app: falkordb-dashboard
spec:
  selector:
    matchLabels:
      app: falkordb-dashboard
  replicas: 1
  template:
    metadata:
      labels:
        app: falkordb-dashboard
    spec:
      nodeSelector:
        role: general
      containers:
        - name: falkordb-dashboard
          image: falkordb/falkordb-browser
          resources:
            requests:
              cpu: 150m
              memory: 250Mi
            limits:
              cpu: 500m
              memory: 800Mi
          ports:
            - containerPort: 3000
              name: ui
      restartPolicy: Always
