packages/server/prod/falkordb-dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: falkordb-dashboard
  namespace: falkordb-dashboard
spec:
  selector:
    app: falkordb-dashboard
  type: ClusterIP
  ports:
    - name: ui
      protocol: TCP
      port: 3000
      targetPort: 3000
